Change a font and vertical divier

--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
@@ -59,27 +60,27 @@
                     <div></div>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1" style="padding:20px;"><img src="../assets/img/main/logo.png" style="margin-left:-12px;width:250px;margin-bottom:5px;">
-                    <p class="lead" style="font-size:18px;">The Korean British Cultural Exchange is a newly-founded non-profit organisation set up to organise cultural and educational activities to promote Korean culture in the UK. The aim is to help better understand each other and build a
+                    <p class="lead" style="font-size:14px;font-family:'Open Sans', sans-serif;">The Korean British Cultural Exchange is a newly-founded non-profit organisation set up to organise cultural and educational activities to promote Korean culture in the UK. The aim is to help better understand each other and build a
                         better community together through artistic collaboration and creativity. </p>
-                    <p class="lead" style="font-size:18px;">KBCE is organised by volunteers and always welcome to work with local artists and people. If you like to have more information about the Korean British Cultural Exchange and its activities, please send us an email to&nbsp;<a href="mailto:kbce@kbce.org.uk"
+                    <p class="lead" style="font-size:14px;font-family:'Open Sans', sans-serif;">KBCE is organised by volunteers and always welcome to work with local artists and people. If you like to have more information about the Korean British Cultural Exchange and its activities, please send us an email to&nbsp;<a href="mailto:kbce@kbce.org.uk"
                         target="_self"><span style="text-decoration: underline;">kbce@kbce.org.uk</span></a> </p>
-                    <p class="lead" style="font-size:18px;">Follow us on our Social media platforms</p>
+                    <p class="lead" style="font-size:14px;font-family:'Open Sans', sans-serif;">Follow us on our Social media platforms</p>
                     <div class="table-row" style="vertical-align: middle;padding-bottom:10px">
     <a href="https://www.facebook.com/kbce.official">
-        <img src="../assets/img/logo_facebook.png" style="float:middle; width:40px;margin:0px;margin-right:10px;margin-left:0px;" />
+        <img src="../assets/img/logo_facebook.png" style="float:middle; width:30px;margin:0px;margin-right:10px;margin-left:0px;" />
         <h5 style="display: inline; vertical-align: middle;">Korean British Cultural Exchange</h5>
     </a>
 </div>
                     <div class="table-row" style="vertical-align: middle;">
     <a href="https://www.instagram.com/_kbce">
-        <img src="../assets/img/logo_insta.png" style="float:middle; width:40px;margin:0px;margin-right:10px;margin-left:0px;" />
+        <img src="../assets/img/logo_insta.png" style="float:middle; width:30px;margin:0px;margin-right:10px;margin-left:0px;" />
         <h5 style="display: inline; vertical-align: middle;">_KBCE</h5>
     </a>
 </div>
                 </div>
                 <div class="col-lg-4 col-md-5">
-                    <h2 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:'Open Sans', sans-serif;"><strong>CONTACT</strong></h2>
-                    <p class="lead" style="font-size:16px;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
+                    <h2 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:'Open Sans Condensed', sans-serif;"><strong>CONTACT</strong></h2>
+                    <p class="lead" style="font-size:14px;font-family:'Open Sans', sans-serif;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
                     <div class="form-group has-success has-feedback">
     <div class="fb-comments" data-href="http://kbce.org.uk" data-width="100%" data-numposts="5"></div>
 </div>
