--- a/education/hanbok.html
+++ b/education/hanbok.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
@@ -50,7 +51,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="row" style="padding:0px;background-color:rgba(0,0,0,0.0980392);margin-bottom:10px;margin-top:10px;margin-left:0px;margin-right:0px;">
                         <div class="col-lg-12">
-                            <h3 style="font-family:'Roboto Condensed', sans-serif;margin-bottom:0px;"><strong>HANBOK </strong></h3><small style="font-family:Open Sans;">July 7, 2017 | KBCE</small>
+                            <h3 style="font-family:'Open Sans Condensed', sans-serif;margin-bottom:0px;"><strong>HANBOK </strong></h3><small style="font-family:Open Sans;">July 7, 2017 | KBCE</small>
                             <p style="font-size:12px;"> </p>
                             <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/u5QcOSgFSMU" frameborder="0" allowfullscreen></iframe>
@@ -60,7 +61,7 @@
     <iframe width="630" height="354" src="https://www.youtube.com/embed/-vcB_wIf_0U" frameborder="0" allowfullscreen></iframe>
 </div>
                             <p style="font-size:12px;"> </p>
-                            <p style="font-size:12px;">All is welcome, shapes and sizes to try on traditional Hanboks. For people who do not know what is a Korean hanbok: It is traditional grown originated from South Korea. Traditionally, people used to wear it every day, but nowadays
+                            <p style="font-size:13px;">All is welcome, shapes and sizes to try on traditional Hanboks. For people who do not know what is a Korean hanbok: It is traditional grown originated from South Korea. Traditionally, people used to wear it every day, but nowadays
                                 Hanbok is traditional wore during special occasions, such as festivals or special anniversaries. Even though they're wearing for special occasions they are also worn for fun days out with friends and family around the palaces
                                 on a normal day out in South Korea. So, everyone can wear it! Whatever the occasion! We will be having a stall where boys and girls can dress themselves up in fancy beautiful hanboks and become Korean princess and kings
                                 for the day. They will be a photo booth provided, where you and your friends can take memorable photos in your gowns and show off your Hanbok. Don’t be shy and come along! </p>
