--- a/education/kimchi.html
+++ b/education/kimchi.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
@@ -56,11 +57,11 @@
     <iframe width="630" height="354" src="https://www.youtube.com/embed/mvpO3qeLjYc" frameborder="0" allowfullscreen></iframe>
 </div>
                             <p style="font-size:12px;"> </p>
-                            <h6><strong>INGREDIENTS</strong> </h6>
-                            <p style="font-size:12px;">1 Chinese cabbage |&nbsp;1/4 cup sea salt or salt |&nbsp;1 tbs grated garlic (5 to 6 cloves) |&nbsp;1 tsp sugar |&nbsp;2 to 3 tbs of fish sauce |&nbsp;1 to 5 tbs Korean red pepper flakes (gochugaru) |&nbsp;100g Mooli |&nbsp;4
+                            <h5><strong>INGREDIENTS</strong> </h5>
+                            <p style="font-size:13px;">1 Chinese cabbage |&nbsp;1/4 cup sea salt or salt |&nbsp;1 tbs grated garlic (5 to 6 cloves) |&nbsp;1 tsp sugar |&nbsp;2 to 3 tbs of fish sauce |&nbsp;1 to 5 tbs Korean red pepper flakes (gochugaru) |&nbsp;100g Mooli |&nbsp;4
                                 spring onion, trimmed and cut into piece </p>
                             <p style="font-size:12px;"> </p>
-                            <h6><strong>METHOD</strong> </h6>
+                            <h5><strong>METHOD</strong> </h5>
                             <ol>
     <li>Slice the cabbage: Cut the cabbage lengthwise into quarters and remove the cores. Cut each quarter crosswise into 2-inch-wide strips. </li>
     <li>Salt the cabbage: Place the cabbage and salt in a large bowl. Using your hands, massage the salt into the cabbage until it starts to soften a bit.</li>
