--- a/education/mystic.html
+++ b/education/mystic.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
@@ -53,15 +54,15 @@
                             <h3 style="font-family:'Roboto Condensed', sans-serif;margin-bottom:0px;"><strong>MYSTIC NIGHTS DANCE WORKSHOPS</strong> </h3><small>June 30, 2017 | KBCE</small>
                             <p style="font-size:12px;"> </p><img class="img-responsive" src="../assets/img/education/education_01.jpg">
                             <p style="font-size:12px;"> </p>
-                            <p style="font-size:12px;">We are aiming to bring you the latest dance choreographies from all the hottest groups like EXO and BLACKPINK. </p>
-                            <p style="font-size:12px;">Mystic Nights are a co-ed group of dancers that all specialize in unique styles. We stay on top of all the Hallyu News and work alongside companies to share this segment of Korean culture in a fun and engaging way. </p>
-                            <p style="font-size:12px;">We will be teaching via request and popularity. With classes open to all ages and levels, we are here to make all the choreographies as easy and fun to learn as we can in a community filled with fellow kpoppers that you can
+                            <p style="font-size:13px;">We are aiming to bring you the latest dance choreographies from all the hottest groups like EXO and BLACKPINK. </p>
+                            <p style="font-size:13px;">Mystic Nights are a co-ed group of dancers that all specialize in unique styles. We stay on top of all the Hallyu News and work alongside companies to share this segment of Korean culture in a fun and engaging way. </p>
+                            <p style="font-size:13px;">We will be teaching via request and popularity. With classes open to all ages and levels, we are here to make all the choreographies as easy and fun to learn as we can in a community filled with fellow kpoppers that you can
                                 share the experience with. </p>
-                            <p style="font-size:12px;">We are starting classes off small and spaces will be limited so it is best that you get back to us as soon as possible to grab a space. Be sure to share the news as we are excited to meet you! </p>
-                            <p style="font-size:12px;">Classes are £8 per 2 hour session and will be held at Richard Challoner School(Manor Drive North,&nbsp;New Malden,&nbsp;Surrey&nbsp;KT3 5PE )&nbsp;every Thursday @ 6pm. </p>
-                            <p style="font-size:12px;">Any question, please send email to;&nbsp;<a href="mailto:mysticnightsent@gmail.com" target="_self"><span style="text-decoration: underline;">mysticnightsent@gmail.com </span></a>We look forward to seeing you there!&nbsp; </p>
+                            <p style="font-size:13px;">We are starting classes off small and spaces will be limited so it is best that you get back to us as soon as possible to grab a space. Be sure to share the news as we are excited to meet you! </p>
+                            <p style="font-size:13px;">Classes are £8 per 2 hour session and will be held at Richard Challoner School(Manor Drive North,&nbsp;New Malden,&nbsp;Surrey&nbsp;KT3 5PE )&nbsp;every Thursday @ 6pm. </p>
+                            <p style="font-size:13px;">Any question, please send email to;&nbsp;<a href="mailto:mysticnightsent@gmail.com" target="_self"><span style="text-decoration: underline;">mysticnightsent@gmail.com </span></a>We look forward to seeing you there!&nbsp; </p>
                             <p
-                            style="font-size:12px;">*If you are under the age of 18 we will be needing emergency contact information from a legal parent or guardian.Please send us a your name, a guardians name and a contact number. You can find on facebook under Mystic Nights
+                            style="font-size:13px;">*If you are under the age of 18 we will be needing emergency contact information from a legal parent or guardian.Please send us a your name, a guardians name and a contact number. You can find on facebook under Mystic Nights
                                 Entertainment.&nbsp; </p>
                                 <p style="font-size:12px;color:#808080;">Tags: K-pop, Dance, Mystic Nights, Workshop</p>
                         </div>
