--- a/festival/community.html
+++ b/festival/community.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
@@ -49,26 +50,26 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="intro">
-                        <h1 style="color:#eb4221;"><strong>C</strong>OMMUNITY FESTIVAL</h1>
-                        <p style="color:rgb(86,88,91);font-size:16px;">The Community Fest will represent some of the most varied entertainment from Korea’s traditions to the latest culture by both Koreans from North and South as well as British local artists along with educational programme for everyone.
+                        <h1 style="color:#eb4221;font-family:'Open Sans Condensed', sans-serif;"><strong>COMMUNITY FESTIVAL</strong></h1>
+                        <p style="color:rgb(86,88,91);">The Community Fest will represent some of the most varied entertainment from Korea’s traditions to the latest culture by both Koreans from North and South as well as British local artists along with educational programme for everyone.
                             </p>
-                        <p style="color:rgb(86,88,91);font-size:16px;">The world premiere of Gilnori 2017 will starts the Fest with a big bang to give an insight of what is to come within the Fest. It represents an arts and environmental project called ‘Artrash’ from Korea to shares our concern about
+                        <p style="color:rgb(86,88,91);">The world premiere of Gilnori 2017 will starts the Fest with a big bang to give an insight of what is to come within the Fest. It represents an arts and environmental project called ‘Artrash’ from Korea to shares our concern about
                             the environmental issues. There will be numerous exciting audience participation programmes. One-year-old babies will be invited to experience Doljabee ceremony and there will be other programmes such as Korean folk game (Jaegichagi),
                             paper flower and lantern making for families and children to enjoy. Children can try on traditional Korean costumes too! </p>
-                        <p style="color:#eb4221;font-size:16px;">*Programme can be changed without prior notice.&nbsp; </p>
+                        <p style="color:#eb4221;">*Programme can be changed without prior notice.&nbsp; </p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-lg-offset-3 col-md-4 col-md-offset-2 col-sm-5 col-sm-offset-1 col-xs-6" style="color:#055ada;background-color:#e4e4e4;">
-                    <h4 class="text-center"><a href="#performance"><strong>PERFORMANCE </strong></a></h4></div>
+                    <h4 class="text-center"><a href="#performance" style="font-family:'Open Sans Condensed', sans-serif;"><strong>PERFORMANCE </strong></a></h4></div>
                 <div class="col-lg-3 col-md-4 col-sm-5 col-xs-6" style="color:#055ada;background-color:#e4e4e4;">
-                    <h4 class="text-center"><a href="#participation"><strong>PARTICIPATION </strong></a></h4></div>
+                    <h4 class="text-center"><a href="#participation" style="font-family:'Open Sans Condensed', sans-serif;"><strong>PARTICIPATION </strong></a></h4></div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" style="color:#055ada;">
                     <div id="performance">
-    <h2><strong>PERFORMANCE</strong></h2>
+    <h2 style="font-family:'Open Sans Condensed', sans-serif;"><strong>PERFORMANCE</strong></h2>
 </div>
                 </div>
             </div>
@@ -93,7 +94,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div style="height:2px;background-color:#eb4221;"></div>
+                    <div style="height:1px;background-color:#eb4221;"></div>
                 </div>
             </div>
             <div class="row">
@@ -167,12 +168,12 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div style="height:2px;background-color:#eb4221;"></div>
+                    <div style="height:1px;background-color:#eb4221;"></div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <h3>SAMULNORI_ BRIDGE </h3></div>
+                    <h3><strong>SAMULNORI_ BRIDGE </strong></h3></div>
                 <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
                     <div class="toc">
                         <figure><img class="img-responsive" src="../assets/img/community-fest_05.png"></figure>
@@ -189,12 +190,12 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div style="height:2px;background-color:#eb4221;"></div>
+                    <div style="height:1px;background-color:#eb4221;"></div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <h3>ARIRANG GAYAGEUM ENSEMBLE </h3></div>
+                    <h3><strong>ARIRANG GAYAGEUM ENSEMBLE </strong></h3></div>
                 <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
                     <div class="toc">
                         <figure><img class="img-responsive" src="../assets/img/community-fest_07.png"></figure>
@@ -212,12 +213,12 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div style="height:2px;background-color:#eb4221;"></div>
+                    <div style="height:1px;background-color:#eb4221;"></div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <h3>KOREAN MARTIAL ARTS_HAPKIDO </h3></div>
+                    <h3><strong>KOREAN MARTIAL ARTS_HAPKIDO </strong></h3></div>
                 <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
                     <div class="toc">
                         <figure><img class="img-responsive" src="../assets/img/community-fest_06.png"></figure>
@@ -241,12 +242,12 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div style="height:2px;background-color:#eb4221;"></div>
+                    <div style="height:1px;background-color:#eb4221;"></div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <h3>KOREAN FOOD </h3></div>
+                    <h3><strong>KOREAN FOOD </strong></h3></div>
                 <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
                     <div class="toc">
                         <figure><img class="img-responsive" src="../assets/img/market-fest_07.jpg"></figure>
@@ -291,13 +292,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div style="height:2px;background-color:#eb4221;"></div>
+                    <div style="height:1px;background-color:#eb4221;"></div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" style="color:#055ada;">
                     <div id="participation">
-    <h2><strong>PARTICIPATION</strong></h2>
+    <h2 style="font-family:'Open Sans Condensed', sans-serif;"><strong>PARTICIPATION</strong></h2>
 </div>
                 </div>
             </div>
