--- a/festival/exhibition.html
+++ b/festival/exhibition.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
@@ -49,12 +50,12 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="intro">
-                        <h1 class="text-left" style="color:#eb4221;"><strong>EXIHIBITION 'DOL'</strong></h1></div>
+                        <h1 class="text-left" style="color:#eb4221;font-family:'Open Sans Condensed', sans-serif;"><strong>EXIHIBITION 'DOL'</strong></h1></div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <h3><strong>BABY'S FIRST BIRTHDAY CELEBRATION IN KOREA </strong></h3></div>
+                    <h3 style="font-family:'Open Sans Condensed', sans-serif;font-size:22px;"><strong>BABY'S FIRST BIRTHDAY CELEBRATION IN KOREA </strong></h3></div>
                 <div class="col-lg-6 col-lg-offset-2 col-md-7 col-md-offset-1 col-sm-9">
                     <div class="text">
                         <p>The Kingston Korean Festival begins with the exhibition, Dol, Baby’s First Birthday Celebration in Korea. </p>
