--- a/festival/festival.html
+++ b/festival/festival.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
@@ -49,7 +50,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="intro">
-                        <h1 class="text-left" style="color:#eb4221;"><strong>KINGSTON KOREAN FESTIVAL</strong></h1></div>
+                        <h1 class="text-left" style="color:#eb4221;font-family:'Open Sans Condensed', sans-serif;"><strong>KINGSTON KOREAN FESTIVAL</strong></h1></div>
                 </div>
             </div>
             <div class="row">
@@ -58,16 +59,16 @@
                 </div>
                 <div class="col-lg-4 col-md-5">
                     <div class="text">
-                        <p style="font-size:12px;">Following the great success of last year’s Autumn Full Moon Festival, Kingston Korean Festival 2017 returns to Kingston where the biggest Korean community in Europe is based. This year, Kingston Korean Festival runs two main programmes
+                        <p>Following the great success of last year’s Autumn Full Moon Festival, Kingston Korean Festival 2017 returns to Kingston where the biggest Korean community in Europe is based. This year, Kingston Korean Festival runs two main programmes
                             to celebrate Korean culture and to engage with local people in many ways.&nbsp; Experience how Koreans are celebrating its first birthday at the Kingston Museum. Come and enjoy community Fest at the market place! Try Korean
                             food and watch performances, such K-Dances, K-Music and Hapkido featuring by Koreans and Locals artists uniting together to give an outstanding show.
                             <br/>Kingston Korean Festival presents something new, unexpected and exciting community event that Korean community would like to welcome everyone to experience Korean culture so we can better understand
                             each other and build a better Kingston together. There will be fundraising activities and events to support local causes.&nbsp;</p>
                         <h5 style="margin-bottom:5px;color:#127d2d;"><strong>Exhibition | Kingston Museum, Kingston</strong> </h5>
-                        <p style="font-size:12px;">‘Dol’, Baby's&nbsp;First&nbsp;Birthday Celebration in Korea&nbsp;
+                        <p>‘Dol’, Baby's&nbsp;First&nbsp;Birthday Celebration in Korea&nbsp;
                             <br/>31st August ~ 3rd&nbsp;October 2017 </p>
                         <h5 style="margin-bottom:5px;color:#127d2d;"><strong>Community Fest | Ancient Market Place, Kingston</strong> </h5>
-                        <p style="font-size:12px;">12:00~16:00, Sat 16th &nbsp;September 2017 </p>
+                        <p>12:00~16:00, Sat 16th &nbsp;September 2017 </p>
                     </div>
                 </div>
             </div>
