--- a/home/home.html
+++ b/home/home.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
@@ -82,7 +83,7 @@
                 <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3 class="text-center" style="font-family:Actor, sans-serif;">SPECIAL THANKS</h3></div>
+                            <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;"><strong>SPECIAL THANKS</strong></h3></div>
                     </div>
                     <div class="row">
                         <div class="col-md-12"><img src="../assets/img/logo_kingston.jpg" width="100px" style="margin:10px;"><img src="../assets/img/logo_oversea_koreans.jpg" width="170px" style="margin:10px;"><img src="../assets/img/logo_hanbok.png" width="140px" style="margin:10px;"><img src="../assets/img/exhibition_02.png" width="170px"
@@ -92,7 +93,7 @@
                 <div class="col-lg-4 col-md-5">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3 class="text-center" style="font-family:Actor, sans-serif;">PARTNERS </h3></div>
+                            <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;"><strong>PARTNERS </strong></h3></div>
                     </div>
                     <div class="row">
                         <div class="col-md-12"><img src="../assets/img/logo_artrash.png" width="100px" style="margin:10px;"></div>
@@ -104,7 +105,7 @@
                     <h1> </h1></div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
