Cleaning unused fonts

--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -7,13 +7,8 @@
     <title>KBCE2017</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Armata">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="../assets/css/styles.min.css">
@@ -56,9 +51,6 @@
     <div>
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <div></div>
-                </div>
                 <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1" style="padding:20px;"><img src="../assets/img/main/logo.png" style="margin-left:-12px;width:250px;margin-bottom:5px;">
                     <p class="lead" style="font-size:14px;font-family:'Open Sans', sans-serif;">The Korean British Cultural Exchange is a newly-founded non-profit organisation set up to organise cultural and educational activities to promote Korean culture in the UK. The aim is to help better understand each other and build a
                         better community together through artistic collaboration and creativity. </p>
@@ -77,6 +69,7 @@
         <h5 style="display: inline; vertical-align: middle;">_KBCE</h5>
     </a>
 </div>
+                    <div class="vertical-divider hidden-xs hidden-sm"></div>
                 </div>
                 <div class="col-lg-4 col-md-5">
                     <h2 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:'Open Sans Condensed', sans-serif;"><strong>CONTACT</strong></h2>
