--- a/home/home.html
+++ b/home/home.html
@@ -7,13 +7,8 @@
     <title>KBCE2017</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Armata">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="../assets/css/styles.min.css">
@@ -57,7 +52,7 @@
         <div class="container post">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div class="carousel slide" data-ride="carousel" id="carousel-1" style="width:940;">
+                    <div class="carousel slide" data-ride="carousel" id="carousel-1">
                         <div class="carousel-inner" role="listbox">
                             <div class="item active"><img class="img-responsive" src="../assets/img/main/home_sliding-banner_01.jpg" alt="Slide Image" style="width:1140px;height:auto;"></div>
                             <div class="item"><img class="img-responsive" src="../assets/img/main/home_sliding-banner_02.jpg" alt="Slide Image" style="width:1140px;"></div>
@@ -89,6 +84,7 @@
                         <div class="col-md-12"><img src="../assets/img/logo_kingston.jpg" width="100px" style="margin:10px;"><img src="../assets/img/logo_oversea_koreans.jpg" width="170px" style="margin:10px;"><img src="../assets/img/logo_hanbok.png" width="140px" style="margin:10px;"><img src="../assets/img/exhibition_02.png" width="170px"
                             style="margin:10px;"></div>
                     </div>
+                    <div class="vertical-divider hidden-xs hidden-sm"></div>
                 </div>
                 <div class="col-lg-4 col-md-5">
                     <div class="row">
