Added and adapted a left/right divider

--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -69,9 +69,9 @@
         <h5 style="display: inline; vertical-align: middle;">_KBCE</h5>
     </a>
 </div>
-                    <div class="vertical-divider hidden-xs hidden-sm"></div>
                 </div>
                 <div class="col-lg-4 col-md-5">
+                    <div class="left-vertical-divider hidden-xs hidden-sm"></div>
                     <h2 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:'Open Sans Condensed', sans-serif;"><strong>CONTACT</strong></h2>
                     <p class="lead" style="font-size:14px;font-family:'Open Sans', sans-serif;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
                     <div class="form-group has-success has-feedback">
