--- a/home/home.html
+++ b/home/home.html
@@ -84,7 +84,7 @@
                         <div class="col-md-12"><img src="../assets/img/logo_kingston.jpg" width="100px" style="margin:10px;"><img src="../assets/img/logo_oversea_koreans.jpg" width="170px" style="margin:10px;"><img src="../assets/img/logo_hanbok.png" width="140px" style="margin:10px;"><img src="../assets/img/exhibition_02.png" width="170px"
                             style="margin:10px;"></div>
                     </div>
-                    <div class="vertical-divider hidden-xs hidden-sm"></div>
+                    <div class="right-vertical-divider hidden-xs hidden-sm"></div>
                 </div>
                 <div class="col-lg-4 col-md-5">
                     <div class="row">
