Fix the heading of designer

--- a/festival/exhibition.html
+++ b/festival/exhibition.html
@@ -68,10 +68,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <h3>
+                    <h3 style="display: inline; ">
     <strong>DESIGNER, HAE MI LEE </strong>
-    <img style="width:200px;height:auto;margin-top:-20px" src="../assets/img/exhibition_02.png" class="img-responsive pull-right" />
 </h3>
+<img class="img-responsive" style="display: inline; width:160px; margin-top:-5px; margin-left:10px; " src="../assets/img/exhibition_02.png" />
+
+                </div>
+                <div class="col-md-12">
+                    <p> </p>
                 </div>
                 <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
                     <figure><img class="img-responsive" src="../assets/img/exhibition_04.jpg"></figure>
